--- a/lib/l10n/intl_ja_Kana.arb
+++ b/lib/l10n/intl_ja_Kana.arb
@@ -84,7 +84,7 @@
   "@buildDate": {},
   "commitDate": "コミットデート",
   "@commitDate": {},
-  "rustcVersion": "Rustc バージョン",
+  "rustcVersion": "ラストコンパイラバージョン",
   "@rustcVersion": {},
   "activation": "アクティベーション",
   "@activation": {},
