--- a/lib/l10n/intl_zh_Hant_TW.arb
+++ b/lib/l10n/intl_zh_Hant_TW.arb
@@ -689,5 +689,17 @@
   "importM3u8": "匯入播放清單",
   "@importM3u8": {
     "description": "上下文選單項目，指導使用者匯入新播放清單。"
+  },
+  "adaptiveSwitching": "自適應切換",
+  "@adaptiveSwitching": {
+    "description": "播放設定頁面中某項設定的標題"
+  },
+  "adaptiveSwitchingSubtitle": "若當前曲目已播放超過三秒，切換回前一曲時將從頭開始播放。",
+  "@adaptiveSwitchingSubtitle": {
+    "description": "Settings description of an entry in the playback settings page"
+  },
+  "considerPurchase": "請考慮購買正版授權。",
+  "@considerPurchase": {
+    "description": "Notice in the about page, guiding user to purchase a license"
   }
 }
