--- a/lib/l10n/intl_ja_Kana.arb
+++ b/lib/l10n/intl_ja_Kana.arb
@@ -968,5 +968,11 @@
   "considerPurchase": "ジェニュインライセンスのパーチェスをコンシダーください。",
   "@considerPurchase": {
     "description": "Notice in the about page, guiding user to purchase a license"
-  }
+  },
+  "lyrics": "リリクス",
+  "@lyrics": {
+    "description": "Button prompt text for controlling playback, used to switch to the lyrics page."
+  },
+  "lyricsSubtitle": "リリクスのフルをリビルする",
+  "@lyricsSubtitle": {}
 }
