--- a/lib/l10n/intl_ja_Nise.arb
+++ b/lib/l10n/intl_ja_Nise.arb
@@ -1,5 +1,5 @@
 {
-  "@@locale": "ja",
+  "@@locale": "ja_Nise",
   "rune": "Rune",
   "@rune": {
     "description": "The brand name of the software, which should not be translated."
@@ -16,7 +16,7 @@
   "@copyrightAnnouncement": {
     "description": "The complete copyright statement."
   },
-  "licenseAnnouncement": "この製品は MPL 許諾の下で許可されています。",
+  "licenseAnnouncement": "本製品 MPL 許諾下許可。",
   "@licenseAnnouncement": {
     "description": "The complete software license statement."
   },
@@ -24,11 +24,11 @@
   "@factoryReset": {
     "description": "The title of the button in the settings page that triggers the 'Reset Library History' action."
   },
-  "factoryResetSubtitle": "音楽集からすべての項目を削除する。",
+  "factoryResetSubtitle": "音楽集全項目削除。",
   "@factoryResetSubtitle": {
     "description": "The descriptive text for the 'Factory Reset' button in the settings interface."
   },
-  "bsodBody": "本再生機に問題が発生したため、再起動が必要です。お客様の個人情報を尊重し、情報は一切収集いたしません。",
+  "bsodBody": "本再生機問題発生、再起動必要。客様個人情報尊重、情報一切収集否。",
   "@bsodBody": {
     "description": "On the blue screen interface, this explains to the user that the software has encountered a fatal error. The second sentence humorously addresses the widespread privacy concerns in modern software engineering. Feel free to keep it playful."
   },
@@ -46,9 +46,9 @@
   "@unknownArtist": {},
   "selectDirectory": "格納場所を選択",
   "@selectDirectory": {},
-  "noDataAvailable": "利用可能な資料がありません",
+  "noDataAvailable": "利用可能資料無",
   "@noDataAvailable": {},
-  "start": "始める",
+  "start": "始動",
   "@start": {
     "description": "Decorative text appearing near the Library Home function list."
   },
@@ -88,13 +88,13 @@
   "@rustcVersion": {},
   "activation": "認証",
   "@activation": {},
-  "runeIsActivated": "Rune は認証されています",
+  "runeIsActivated": "Rune 認証完了",
   "@runeIsActivated": {
     "description": "Informs the user that the software is currently activated. In fact, the software is always activated under any circumstances."
   },
   "productId": "製品身元確認",
   "@productId": {},
-  "youMayBeAVictimOfGenuineSoftware": "貴方は正銘被害者かもしれません。",
+  "youMayBeAVictimOfGenuineSoftware": "貴方正銘被害者可能性存在。",
   "@youMayBeAVictimOfGenuineSoftware": {
     "description": "This phrase is an Easter egg, satirizing how anti-piracy measures often make the experience worse for legitimate users than for those using pirated versions. Feel free to keep it playful."
   },
@@ -106,7 +106,7 @@
   "@computingDevice": {
     "description": "A settings entry title that allows users to select the hardware device responsible for performing audio analysis tasks."
   },
-  "computingDeviceSubtitle": "高速または効率的な処理のために画像処理装置または中央処理装置を選択します。",
+  "computingDeviceSubtitle": "高速亦効率的処理為画像処理装置亦中央処理装置選択。",
   "@computingDeviceSubtitle": {},
   "gpu": "画像処理装置",
   "@gpu": {},
@@ -114,7 +114,7 @@
   "@cpu": {},
   "performanceLevel": "性能水準",
   "@performanceLevel": {},
-  "performanceLevelSubtitle": "並行する作業数を選択してください。",
+  "performanceLevelSubtitle": "並行作業数選択肢下。",
   "@performanceLevelSubtitle": {},
   "performance": "性能優先",
   "@performance": {
@@ -128,7 +128,7 @@
   "@batterySaving": {
     "description": "Energy-saving mode, which minimizes resource usage to prevent overheating, suitable for less powerful devices."
   },
-  "switchTo": "切り替え",
+  "switchTo": "切替",
   "@switchTo": {
     "description": "Button prompt text for switching media libraries. Pressing this button will close the current library and open a new one."
   },
@@ -136,27 +136,27 @@
   "@removeLibrary": {
     "description": "Button prompt text for removing a media library. Pressing this button will delete the library entry from the history."
   },
-  "addLibrary": "資料集を追加",
+  "addLibrary": "資料集追加",
   "@addLibrary": {
     "description": "Button prompt text in the settings interface for creating a new media library. Pressing this button guides the user to select a directory and create a library."
   },
-  "addLibrarySubtitle": "新しい資料集を追加し、既存の資料を検出する。",
+  "addLibrarySubtitle": "新資料集追加、既存資料検出。",
   "@addLibrarySubtitle": {},
   "actionMenu": "追加操作",
   "@actionMenu": {
     "description": "A separator in the settings interface element list. All items below this separator will be hidden in a pop-up button instead of being displayed directly on the screen."
   },
-  "addToQueue": "再生予定に追加",
+  "addToQueue": "再生予定追加",
   "@addToQueue": {
     "description": "An entry in the context menu. Pressing this entry will add the corresponding track or album to the playback queue."
   },
-  "addToQueueSubtitle": "新しい曲をどのように再生予定に追加するか。",
+  "addToQueueSubtitle": "新曲何様再生予定追加。",
   "@addToQueueSubtitle": {},
-  "playNext": "次に再生",
+  "playNext": "次再生",
   "@playNext": {
     "description": "An action that queues a track or album to play next in the playlist."
   },
-  "addToEnd": "最後に追加",
+  "addToEnd": "最後追加",
   "@addToEnd": {
     "description": "An action that queues a track or album to the end of the playlist."
   },
@@ -164,7 +164,7 @@
   "@middleClickAction": {
     "description": "A title in the settings interface controlling the behavior when the user middle-clicks a track or album."
   },
-  "middleClickActionSubtitle": "曲や選集まりを中押した際の実行動作。",
+  "middleClickActionSubtitle": "曲及選集中押際実行動作。",
   "@middleClickActionSubtitle": {},
   "startPlaying": "再生開始",
   "@startPlaying": {
@@ -178,23 +178,23 @@
   "@playbackMode": {
     "description": "A title in the settings interface that helps users select the desired playback mode, such as shuffle or sequential play."
   },
-  "playbackModeSubtitle": "音楽の再生方法について、希望する再生形式を選択してください",
+  "playbackModeSubtitle": "音楽再生方法付、希望再生形式選択下",
   "@playbackModeSubtitle": {},
   "colorMode": "配色模式",
   "@colorMode": {
     "description": "A settings entry that helps users choose the interface color mode, including light and dark modes."
   },
-  "colorModeSubtitle": " Rune に表示される配色を変更します。",
+  "colorModeSubtitle": " Rune 表示配色変更。",
   "@colorModeSubtitle": {},
-  "systemColorMode": "作業系統と同期",
+  "systemColorMode": "作業系統同期",
   "@systemColorMode": {
     "description": "A color settings entry that, when enabled, aligns the software's light or dark mode with the system settings."
   },
-  "dark": "暗い",
+  "dark": "暗",
   "@dark": {
     "description": "A color settings entry that enables dark mode when selected."
   },
-  "light": "明るい",
+  "light": "明",
   "@light": {
     "description": "A color settings entry that enables light mode when selected."
   },
@@ -202,9 +202,9 @@
   "@themeColor": {
     "description": "A settings entry that allows users to choose their preferred theme color."
   },
-  "themeColorSubtitle": "Rune に新しい雰囲気をもたらす色を選んでください。",
+  "themeColorSubtitle": "Rune 新雰囲気齎色選出下。",
   "@themeColorSubtitle": {},
-  "followSystemTheme": "作業系統と同期",
+  "followSystemTheme": "作業系統同期",
   "@followSystemTheme": {
     "description": "An entry in the theme color settings. When enabled, the software's theme color follows the system settings."
   },
@@ -212,31 +212,31 @@
   "@dynamicColors": {
     "description": "A color settings entry. When enabled, the software's theme color changes based on the cover art of the currently playing track."
   },
-  "dynamicColorsSubtitle": "再生中の曲の表紙画像に合わせて Rune の色合いを調整します",
+  "dynamicColorsSubtitle": "再生中曲表紙画像合 Rune 色合調整",
   "@dynamicColorsSubtitle": {},
   "brandingAnimation": "起動演出",
   "@brandingAnimation": {
     "description": "A settings entry that allows users to control whether a welcome animation plays when the software starts."
   },
-  "brandingAnimationSubtitle": "Rune 起動時に商標の動きを再生します。",
+  "brandingAnimationSubtitle": "Rune 起動時商標動画再生。",
   "@brandingAnimationSubtitle": {},
-  "thisMightTakeAFewMinutes": "この処理には数分かかることがあります。",
+  "thisMightTakeAFewMinutes": "本処理数分掛事有。",
   "@thisMightTakeAFewMinutes": {
     "description": "Title on the scanning wait screen, reminding users to be patient."
   },
-  "tracksFound": " 曲が見つかりました",
+  "tracksFound": " 曲見狩成功",
   "@tracksFound": {
     "description": "Prompt text on the scanning wait screen, informing users how many tracks have been scanned."
   },
-  "albumCoversCollected": " 歌集表紙画像が収集されました",
+  "albumCoversCollected": " 歌集表紙画像収集去増",
   "@albumCoversCollected": {
     "description": "Prompt text on the scanning wait screen, informing users how many album covers have been scanned."
   },
-  "editPlaylist": "再生一覧表を編集",
+  "editPlaylist": "再生一覧表編集",
   "@editPlaylist": {
     "description": "An entry in the context menu that allows users to edit the metadata of a playlist."
   },
-  "editMix": "調和構成を編集",
+  "editMix": "調和構成編集",
   "@editMix": {
     "description": "An entry in the context menu that allows users to edit the metadata of a Mix, an intelligent playlist. Note: Do not confuse this with the concept of a 'remix.'"
   },
@@ -248,31 +248,31 @@
   "@remove": {
     "description": "A verb in the context menu as fallback text, guiding users to remove content when the software can't identify what should be removed."
   },
-  "removePlaylist": "再生一覧表を削除",
+  "removePlaylist": "再生一覧表削除",
   "@removePlaylist": {
     "description": "An entry in the context menu that allows users to delete a playlist."
   },
-  "removeMix": "調和構成を削除",
+  "removeMix": "調和構成削除",
   "@removeMix": {
     "description": "An entry in the context menu that allows users to delete a Mix, an intelligent playlist. Note: Do not confuse this with the concept of a 'remix.'"
   },
-  "addToMix": "調和構成に追加",
+  "addToMix": "調和構成追加",
   "@addToMix": {
     "description": "An entry in the context menu that allows users to add a track or album to a Mix, an intelligent playlist. Note: Do not confuse this with the concept of a 'remix.'"
   },
-  "newMix": "新しい調和構成",
+  "newMix": "新規調和構成",
   "@newMix": {
     "description": "An entry in the context menu that allows users to create a new Mix, an intelligent playlist. Note: Do not confuse this with the concept of a 'remix.'"
   },
-  "selectAGroup": "組を選択",
+  "selectAGroup": "組選択",
   "@selectAGroup": {
     "description": "Placeholder text in the input field located in the edit Mix or playlist modal, guiding users to select a content group."
   },
-  "likedOnly": "いいねのみ",
+  "likedOnly": "良而已",
   "@likedOnly": {
     "description": "An entry in the Mix edit interface, a checkbox option to filter and keep only tracks that the user has 'liked.'"
   },
-  "allTracks": "全ての曲",
+  "allTracks": "全曲",
   "@allTracks": {
     "description": "An entry in the Mix edit interface, a checkbox option to filter and keep all tracks, not just those the user has 'liked.'"
   },
@@ -284,15 +284,15 @@
   "@sequential": {
     "description": "A way for tracks to be traversed in a playlist, playing in order from start to finish."
   },
-  "repeatAll": "全部繰り返し",
+  "repeatAll": "全部繰返",
   "@repeatAll": {
     "description": "A way for tracks to be traversed in a playlist, repeating from the beginning after finishing."
   },
-  "repeatOne": "一曲繰り返し",
+  "repeatOne": "一曲繰返",
   "@repeatOne": {
     "description": "A way for tracks to be traversed in a playlist, continuously repeating one track."
   },
-  "shuffle": "曲を混ぜる",
+  "shuffle": "曲混再生",
   "@shuffle": {
     "description": "A way for tracks to be traversed in a playlist, playing in a random order."
   },
@@ -316,11 +316,11 @@
   "@cancel": {
     "description": "An action button in the modal that closes the modal without making changes."
   },
-  "noRecommendation": "おすすめはありません",
+  "noRecommendation": "御薦無",
   "@noRecommendation": {
     "description": "An entry in the Mix edit modal dropdown. Selecting this option indicates the user's intent not to base recommendations on query results."
   },
-  "basedOnAll": "全てに基づく",
+  "basedOnAll": "全基混成",
   "@basedOnAll": {
     "description": "An entry in the Mix edit modal dropdown. Selecting this option recommends similar tracks based on the entire set of query results."
   },
@@ -354,7 +354,7 @@
   "@lastModified": {
     "description": "An entry in the Mix edit modal dropdown. This option allows users to sort by the last modified time of file metadata."
   },
-  "duration": "長さ",
+  "duration": "長",
   "@duration": {
     "description": "An entry in the Mix edit modal dropdown. This option allows users to sort by audio length."
   },
@@ -362,19 +362,19 @@
   "@timesPlayedThrough": {
     "description": "An entry in the Mix edit modal dropdown. This option allows users to sort by the number of times audio has been played through completely."
   },
-  "timesSkipped": "飛ばす回数",
+  "timesSkipped": "飛上回数",
   "@timesSkipped": {
     "description": "An entry in the Mix edit modal dropdown. This option allows users to sort by the number of times audio has been skipped."
   },
-  "pickDirectory": "格納場所を選択",
+  "pickDirectory": "格納場所選択",
   "@pickDirectory": {
     "description": "Button prompt text in the Mix edit modal. Pressing this button opens a modal to guide users in selecting a directory."
   },
-  "oneDirectory": "1 つの格納場所",
+  "oneDirectory": "1 着格納場所",
   "@oneDirectory": {
     "description": "Status text indicating one directory has been selected."
   },
-  "manyDirectories": "{count} つの格納場所",
+  "manyDirectories": "{count} 着格納場所",
   "@manyDirectories": {
     "description": "Status text indicating multiple directories have been selected.",
     "placeholders": {
@@ -389,11 +389,11 @@
   "@directories": {
     "description": "A title for an entry in the modal settings options, informing users that the following options are for filtering tracks by folder."
   },
-  "allDirectories": "全ての格納場所",
+  "allDirectories": "全格納場所",
   "@allDirectories": {
     "description": "Prompt indicating that all directories have been selected."
   },
-  "randomTracks": "お任せ",
+  "randomTracks": "御任",
   "@randomTracks": {
     "description": "A title for an entry in the modal settings options, informing users that the following options are for selecting a number of random tracks."
   },
@@ -405,15 +405,15 @@
   "@mode": {
     "description": "The playback mode for tracks."
   },
-  "recommendation": "薦",
+  "recommendation": "推奨",
   "@recommendation": {
     "description": "A title for an entry in the modal settings options, informing users that the following options control the player's recommendation behavior."
   },
-  "sortBy": "並び替え基準",
+  "sortBy": "並替基準",
   "@sortBy": {
     "description": "A title for an entry in the modal settings options, informing users that the following options control the sorting method for tracks."
   },
-  "sortOrder": "並び順",
+  "sortOrder": "並順",
   "@sortOrder": {
     "description": "A title for an entry in the modal settings options, informing users that the following options control the sorting direction for tracks."
   },
@@ -421,41 +421,41 @@
   "@liked": {
     "description": "A title for an entry in the modal settings options, informing users that the following options filter tracks marked as 'liked' by the user."
   },
-  "noRoamingCollection": "漫奏を開始できません。選集内の曲がまだ解析されていません。",
+  "noRoamingCollection": "漫奏開始出来不可。選集内曲解析未然。",
   "@noRoamingCollection": {},
-  "noRoamingTrack": "漫奏を開始できません。この曲はまだ解析されていません。",
+  "noRoamingTrack": "漫奏開始出来不可。此曲解析未然。",
   "@noRoamingTrack": {},
-  "noAnalysisScanning": "{baseMessage} 資料集を検査中のため、解析は実行できません。",
+  "noAnalysisScanning": "{baseMessage} 資料集検査中為、解析実行出来不可。",
   "@noAnalysisScanning": {
     "placeholders": {
       "baseMessage": {}
     }
   },
-  "noAnalysisAnalyzing": "{baseMessage} 資料集を解析中です。処理が終了するまでお待ちください。",
+  "noAnalysisAnalyzing": "{baseMessage} 資料集解析中。処理終了為間御待下。",
   "@noAnalysisAnalyzing": {
     "placeholders": {
       "baseMessage": {}
     }
   },
-  "noAnalysisDefault": "{baseMessage} 最良の体験のために資料集を解析してください。",
+  "noAnalysisDefault": "{baseMessage} 最良体験為資料集解析仕手下。",
   "@noAnalysisDefault": {
     "placeholders": {
       "baseMessage": {}
     }
   },
-  "notReady": "準備ができていません",
+  "notReady": "準備出来未然",
   "@notReady": {
     "description": "Modal title indicating that tracks haven't been analyzed and recommendations can't be made."
   },
-  "createPlaylist": "再生一覧表を作成",
+  "createPlaylist": "再生一覧表作成",
   "@createPlaylist": {
     "description": "Modal title for creating a playlist."
   },
-  "scanLibrary": "資料集を検査",
+  "scanLibrary": "資料集検査",
   "@scanLibrary": {
     "description": "Action button text in the modal, initiating a media library scan when pressed."
   },
-  "analyzeTracks": "曲を解析",
+  "analyzeTracks": "曲解析",
   "@analyzeTracks": {
     "description": "Action button text in the modal, initiating analysis of all tracks in the media library when pressed."
   },
@@ -475,29 +475,29 @@
   "@analyzing": {
     "description": "Button prompt text in the settings interface, indicating the media library is currently being analyzed."
   },
-  "tryCreatingYourOwnCollection": "独自の選集を作成してみてください",
+  "tryCreatingYourOwnCollection": "独自選集作成仕手見下",
   "@tryCreatingYourOwnCollection": {
     "description": "Text displayed on a blank page in the Collection view, suggesting users create a new collection."
   },
-  "theseActionsMayHelp": "以下の行動が問題解決に役立つ可能性があります",
+  "theseActionsMayHelp": "以下行動問題解決役立可能性有",
   "@theseActionsMayHelp": {},
-  "tryScanningNewFiles": "新しい資料を検査してみてください",
+  "tryScanningNewFiles": "新資料検査仕手見下",
   "@tryScanningNewFiles": {},
-  "noCollectionFound": "選集が見つかりません",
+  "noCollectionFound": "選集見狩未然",
   "@noCollectionFound": {},
-  "noItemsInPlaylist": "再生一覧表に項目がありません",
+  "noItemsInPlaylist": "再生一覧表項目未然有",
   "@noItemsInPlaylist": {},
-  "previous": "前へ",
+  "previous": "前",
   "@previous": {
     "description": "Button prompt text for controlling playback, used to skip to the previous track."
   },
-  "previousSubtitle": "前の曲に移動",
+  "previousSubtitle": "前曲移動",
   "@previousSubtitle": {},
   "playPause": "再生/一時停止",
   "@playPause": {
     "description": "Button prompt text for controlling playback, used to toggle between play and pause states."
   },
-  "playPauseSubtitle": "再生と一時停止を切り替え",
+  "playPauseSubtitle": "再生同一時停止を切り替え",
   "@playPauseSubtitle": {},
   "next": "次へ",
   "@next": {
@@ -515,15 +515,15 @@
   "@playlist": {
     "description": "Button prompt text for controlling playback, used to display the playlist."
   },
-  "playlistSubtitle": "再生一覧表を表示",
+  "playlistSubtitle": "再生一覧表表示",
   "@playlistSubtitle": {},
   "hidden": "非表示",
   "@hidden": {
     "description": "Button prompt text indicating a hidden button; this text is typically not used."
   },
-  "hiddenSubtitle": " 以下の内容は「その他」の一覧に非表示となります",
+  "hiddenSubtitle": " 以下内容「其他」一覧非表示",
   "@hiddenSubtitle": {},
-  "coverWall": "表紙画像の壁",
+  "coverWall": "表紙画像壁",
   "@coverWall": {
     "description": "Button prompt text for controlling playback, used to switch to the cover wall page, a decorative page composed of album covers."
   },
@@ -973,6 +973,6 @@
   "@lyrics": {
     "description": "Button prompt text for controlling playback, used to switch to the lyrics page."
   },
-  "lyricsSubtitle": "歌詞の全容を掲載する",
+  "lyricsSubtitle": "歌詞全容掲載",
   "@lyricsSubtitle": {}
 }
